[package]
name = "move-stdlib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
move-errmapgen.workspace = true
move-docgen.workspace = true
move-command-line-common.workspace = true
move-prover.workspace = true
move-vm-types.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
# referred to via path for execution versioning
move-vm-runtime.workspace = true
log.workspace = true
walkdir.workspace = true
smallvec.workspace = true
sha2.workspace = true
sha3.workspace = true
anyhow.workspace = true
hex.workspace = true

[dev-dependencies]
move-unit-test.workspace = true
tempfile.workspace = true
dir-diff.workspace = true
file_diff.workspace = true
move-cli.workspace = true


[features]
default = []
testing = []