[package]
name = "mona-ibc"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ibc.workspace = true
ibc-proto = "0.51.1"
ics23 = "0.12.0"

