[package]
name = "mona-storage"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
move-core-types.workspace =true 
async-trait = "0.1"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.0", features = ["full"] }

rocksdb.workspace = true
bincode.workspace = true
thiserror.workspace = true