[package]
name = "mona-storage"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
move-core-types.workspace =true 
async-trait.workspace = true
dirs.workspace = true
mime_guess.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
rocksdb.workspace = true
bincode.workspace = true
thiserror.workspace = true
chrono.workspace = true
tempfile.workspace = true