[package]
name = "mona-types"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true


[dependencies]
# The `move-core-types` crate contains the core types of the Move language.
# Move dependencies (optional)
move-binary-format = { workspace = true, optional = true }
move-bytecode-utils = { workspace = true, optional = true }
move-command-line-common = { workspace = true, optional = true }
move-core-types = { workspace = true, optional = true }
move-vm-test-utils = { workspace = true, optional = true }
move-vm-types = { workspace = true, optional = true }
move-vm-profiler = { workspace = true, optional = true }


mona-enum-compat-util.workspace = true

bcs.workspace = true
serde.workspace = true
sha2.workspace = true
sha3.workspace = true
hex.workspace = true
primitive-types = "0.13.1"
thiserror = "2.0.11"

[features]
# This feature is used to include the gas profiler in the mona-types crate.
gas-profiler = [
    "move-vm-profiler/gas-profiler",
    "move-vm-types/gas-profiler",
    "move-vm-test-utils/gas-profiler",
]

[dev-dependencies]
hex-literal = "0.4"

