[package]
name = "x"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
karics = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"