[package]
name = "k2"
edition = "2021"
version.workspace = true

[dependencies]



digest.workspace = true
serde.workspace = true
hex.workspace = true
serde_json.workspace = true
sha2.workspace = true
bincode.workspace = true
jsonrpc-core.workspace = true
jsonrpc-http-server.workspace = true
futures.workspace = true
secp256k1.workspace = true
rand.workspace = true
bip39.workspace = true
colored.workspace = true
chrono.workspace = true
dirs.workspace = true
tokio.workspace = true
log.workspace = true    
env_logger.workspace = true
consensus-pos.workspace = true
network.workspace = true
bcs.workspace = true

move-core-types.workspace = true


