[package]
name = "k2"
edition.workspace = true
version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]

# Cryptography
secp256k1.workspace = true
sha2.workspace = true
rand.workspace = true
bip39.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
bcs.workspace = true

# Database
rocksdb.workspace = true

# Networking
jsonrpc-core.workspace = true
jsonrpc-http-server.workspace = true
futures.workspace = true
tokio.workspace = true

# Utilities
digest.workspace = true
hex.workspace = true
chrono.workspace = true
dirs.workspace = true
log.workspace = true    
env_logger.workspace = true
colored.workspace = true
thiserror.workspace = true

# MoveVM
move-bytecode-verifier.workspace = true
move-disassembler.workspace = true
move-docgen.workspace = true
move-command-line-common.workspace = true
move-bytecode-utils.workspace = true
move-coverage.workspace = true
move-core-types.workspace = true
move-ir-types.workspace = true
move-compiler.workspace = true
move-stdlib.workspace = true
move-stdlib-natives.workspace = true
move-vm-types.workspace = true
move-vm-runtime.workspace = true
move-vm-profiler.workspace = true
move-vm-test-utils.workspace = true
move-read-write-set-types.workspace = true
move-binary-format.workspace = true
move-package.workspace = true
move-prover.workspace = true
move-unit-test.workspace = true
move-errmapgen.workspace = true
move-bytecode-viewer.workspace = true

# Unit k2
consensus-pos.workspace = true
network.workspace = true

crossbeam.workspace = true