[package]
name = "network"
edition.workspace = true
version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true