[package]
name = "p2p-protocol"
edition.workspace = true
version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
