[package]
name = "rpc-api"
edition.workspace = true
version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
# Networking
jsonrpc-core.workspace = true
jsonrpc-http-server.workspace = true
futures.workspace = true
tokio.workspace = true


# Serialization
serde_json.workspace = true
serde.workspace = true

network.workspace = true
consensus-pos.workspace = true
k2.workspace = true

mona-storage = { path = "../../../monaos/mona-storage" }
base64 = "0.22.1"
