[package]
name = "key"
edition = "2021"
version.workspace = true

[dependencies]
bip39.workspace = true
secp256k1.workspace = true
rand.workspace = true
hex.workspace = true
serde_json.workspace = true



consensus-pos.workspace = true

# This is a workspace crate, so we need to include the following dependencies
k2.workspace = true

