[package]
name = "key"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
bip39.workspace = true
secp256k1.workspace = true
rand.workspace = true
hex.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
consensus-pos.workspace = true

toml.workspace = true

serde.workspace = true
chacha20poly1305.workspace = true
thiserror.workspace = true
argon2.workspace = true

# This is a workspace crate, so we need to include the following dependencies
k2.workspace = true