[package]
name = "key"
edition.workspace = true
version.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
bip39.workspace = true
secp256k1.workspace = true
hex.workspace = true
serde_json = { workspace = true , default-features = true }
lazy_static.workspace = true
consensus-pos.workspace = true
serde_yaml.workspace = true
toml.workspace = true
log.workspace = true
serde.workspace = true
chacha20poly1305.workspace = true
thiserror.workspace = true
argon2.workspace = true
aes-gcm = "0.10.3"
base64 = "0.22.1"


# This is a workspace crate, so we need to include the following dependencies
mona-types.workspace = true
k2.workspace = true


move-core-types = { workspace = true }
move-ir-types = { workspace = true }
move-vm-types = { workspace = true }